--- a/data/custom/custom_races.py.example
+++ b/data/custom/custom_races.py.example
@@ -1,7 +1,6 @@
+from lib.character import Race
+
 custom_race_list = []
-########################################
-# DO NOT EDIT ANYTHING ABOVE THIS LINE #
-########################################
 
 #
 # TEMPLATE
@@ -19,6 +18,9 @@ custom_race_list = []
 #                'Desc': '''Slugpeople leave a trail of slime wherever they go. Every square you move through on your turn counts as difficult terrain for anyone but other slugpeople until the beginning of your next turn.'''}])
 # custom_race_list.append(slugpeople)
 #
+########################################
+# DO NOT EDIT ANYTHING ABOVE THIS LINE #
+########################################
 
 ########################################
 # DO NOT EDIT ANYTHING BELOW THIS LINE #
