--- a/data/custom/custom_races.py.example
+++ b/data/custom/custom_races.py.example
@@ -10,7 +10,8 @@ custom_race_list = []
 #     name='Slugpeople',
 #     desc='''These creatures look like giant slugs.  Slimy!''',
 #     size='medium',
-#     strength=0, agility=0, endurance=2, intuition=2, logic=0, willpower=1, charisma=-1, luck=0, reputation=0, power=0,
+#     strength=0, agility=0, endurance=2, intuition=2, logic=0, willpower=1, charisma=-1, luck=0, reputation=0, magic=0,
+#     chi=0, psionics=0,
 #     available_skills=['[trivia]', '[gaming]', '[scientific]', 'engineering', 'slithering'],
 #     exploits=[{'Name': '''Slippery''',
 #                'Desc': '''Slugpeople are so slimy they are hard to grab. Attackers must pay an extra 1d6 when attempting to grab you.'''},
@@ -21,6 +22,9 @@ custom_race_list = []
 ########################################
 # DO NOT EDIT ANYTHING ABOVE THIS LINE #
 ########################################
+
+
+
 
 ########################################
 # DO NOT EDIT ANYTHING BELOW THIS LINE #
