initial gui implementation

--- a/data/custom/custom_careers.py.example
+++ b/data/custom/custom_careers.py.example
@@ -33,6 +33,6 @@ custom_career_list = []
 ########################################
 # DO NOT EDIT ANYTHING BELOW THIS LINE #
 ########################################
-custom_career_list.sort(key=lambda x: x.name)
+# custom_career_list.sort(key=lambda x: x.name)
 for career in custom_career_list:
     career.available_skills.sort()
