--- a/data/custom/custom_homeworlds.py.example
+++ b/data/custom/custom_homeworlds.py.example
@@ -33,7 +33,7 @@ custom_homeworld_list = []
 ########################################
 # DO NOT EDIT ANYTHING BELOW THIS LINE #
 ########################################
-custom_homeworld_list.sort(key=lambda x: x.name)
+# custom_homeworld_list.sort(key=lambda x: x.name)
 custom_homeworld_list.insert(0, homeworlds_new.homeworld_none)
 for homeworld in custom_homeworld_list:
     homeworld.available_skills.sort()
